# hazel

./: .gitignore  .tokeignore  CMakeLists.txt  CMakeTests.txt  README.md  TODO.md  hazel.cpp  hview.cpp  makefile
.github/workflows/: release.yml  test.yml  website.yml
basis/: 3-21g.g94  4-31g.g94  5-21g.g94  6-21g.g94  6-31++g**.g94  6-31++g*.g94  6-31++g.g94  6-31+g**.g94  6-31+g*.g94  6-31+g.g94  6-311++g**.g94  6-311++g*.g94  6-311++g.g94  6-311+g**.g94  6-311+g*.g94  6-311+g.g94  6-311g**.g94  6-311g*.g94  6-311g.g94  6-311pg.g94  6-311ppg.g94  6-31g**.g94  6-31g*.g94  6-31g.g94  6-31pg.g94  6-31pgs.g94  6-31ppg.g94  6-31ppgs.g94  augmentation-cc-pv5z.g94  augmentation-cc-pv6z.g94  augmentation-cc-pvdz.g94  augmentation-cc-pvqz.g94  augmentation-cc-pvtz.g94  basis.sh  cc-pv5z.g94  cc-pv6z.g94  cc-pvdz.g94  cc-pvqz.g94  cc-pvtz.g94  def2-qzvp.g94  (+18 more)
docs/: _config.yml  index.md
docs/pages/: hartreefock.md  methods.md  optdynamics.md  optfreq.md  optgradient.md  opthartreefock.md  optmolecule.md  restrictedhartreefock.md  unrestrictedhartreefock.md  usage.md
example/: generate.inp  generate.sh
example/calculation/: qd_imag_harmonic.sh  qd_real_harmonic.sh
example/input/: debug.json  dynamics.json  energy.json
example/molecule/: Ar2.xyz  CO.xyz  CO2.xyz  H2.xyz  HCl.xyz  HF.xyz  He2.xyz  N2.xyz  Ne2.xyz  acetone.xyz  alanine.xyz  ammonia.xyz  benzene.xyz  caffeine.xyz  calculate.sh  cis-stilbene.xyz  compute.sh  create.sh  cyclopropanone.xyz  cysteine.xyz  diethylether.xyz  dimethylether.xyz  diphenylacetylene.xyz  ethane.xyz  ethanethiol.xyz  ethanol.xyz  ethylene.xyz  formaldehyde.xyz  heptane.xyz  methane.xyz  optimize.sh  ozone.xyz  propane.xyz  pyrrole.xyz  recalc.sh  stilbene-cis.xyz  stilbene-trans.xyz  trans-stilbene.xyz  tryptophan.xyz  water.xyz
example/molecule/xyz/: acetone.xyz  alanine.xyz  ammonia.xyz  benzene.xyz  caffeine.xyz  cyclopropanone.xyz  cysteine.xyz  diethylether.xyz  dimethylether.xyz  ethane.xyz  ethanethiol.xyz  ethanol.xyz  formaldehyde.xyz  heptane.xyz  lysine.xyz  methane.xyz  propane.xyz  pyrrole.xyz  stilbene-cis.xyz  thymine.xyz  tryptophan.xyz  tyrosine.xyz  water.xyz
example/scan/: Ar2.xyz  H2.xyz  HCl.xyz  HF.xyz  He2.xyz  Ne2.xyz
example/trajectory/: Ar2.xyz  CO2.xyz  H2.xyz  HCl.xyz  HF.xyz  He2.xyz  Ne2.xyz  acetone.xyz  alanine.xyz  ammonia.xyz  benzene.xyz  caffeine.xyz  calculate.sh  cyclopropanone.xyz  cysteine.xyz  diethylether.xyz  dimethylether.xyz  diphenylacetylene.xyz  ethane.xyz  ethanethiol.xyz  ethanol.xyz  ethylene.xyz  formaldehyde.xyz  heptane.xyz  methane.xyz  propane.xyz  pyrrole.xyz  trajectory.sh  tryptophan.xyz  tyrosine.xyz  water.xyz
example/trajectory/xyz/: acetone_trj.xyz  alanine_trj.xyz  ammonia_trj.xyz  benzene_trj.xyz  caffeine_trj.xyz  cyclopropanone_trj.xyz  cysteine_trj.xyz  diethylether_trj.xyz  dimethylether_trj.xyz  ethane_trj.xyz  ethanethiol_trj.xyz  ethanol_trj.xyz  formaldehyde_trj.xyz  heptane_trj.xyz  methane_trj.xyz  propane_trj.xyz  pyrrole_trj.xyz  (+4 more)
include/: bagel.h  buffer.h  ci.h  constant.h  data.h  defaults.h  define.h  determinant.h  distributor.h  dynamics.h  eigen.h  forcefield.h  forward.h  geometry.h  glfwpointer.h  gradient.h  gui.h  hartreefock.h  hessian.h  hf.h  integral.h  lambda.h  libint.h  logger.h  matrix.h  md.h  mesh.h  mesh3D.h  moleculardynamics.h  molecule.h  moleculegraphic.h  movie.h  mp.h  optimizer.h  orca.h  parser.h  particle.h  potential.h  printer.h  ptable.h  (+13 more)
input/: energy.json
lib/: argparse.hpp
lib/glad/: glad.c
mathematica/: hazel.nb  quantum_dynamics.nb
molecule/: stilbene-cis.xyz  stilbene-trans.xyz  water.xyz
psi/hazel/: __init__.py
python/: cipsi4.py  hazel.py  helper_CI.py  hf_mp2.py  qdyn.py
script/: basis.sh  compare.sh  compile.sh  formatbasis.sh  libint.sh  lines.sh  orca.sh  plot.py  plotwfn.py  potential.py  potential.sh  testing.sh
script/extract/: coulomb.sh  kinetic.sh  mdenergy.sh  nuclear.sh  overlap.sh  scfconv.sh
script/install/: libint.sh  libxc.sh
script/interface/: orca.sh
script/software/: libint.sh  orca.sh
script/util/: compile.sh  lines.sh  onefile.sh  plot.sh
src/: bagel.cpp  buffer.cpp  ci.cpp  determinant.cpp  distributor.cpp  dynamics.cpp  eigen.cpp  forcefield.cpp  geometry.cpp  gradient.cpp  gui.cpp  hartreefock.cpp  hessian.cpp  hf.cpp  integral.cpp  lambda.cpp  libint.cpp  logger.cpp  main.cpp  matrix.cpp  md.cpp  mesh.cpp  mesh3D.cpp  moleculardynamics.cpp  molecule.cpp  moleculegraphic.cpp  movie.cpp  mp.cpp  optimizer.cpp  orca.cpp  parser.cpp  particle.cpp  potential.cpp  printer.cpp  ptable.cpp  qd.cpp  qdyn.cpp  roothaan.cpp  scene.cpp  system.cpp  (+7 more)
teach/haskell/: main.hs
teach/python/: FCI.py
test/: energy_acetone_hf_321g.cpp  energy_acetone_hf_6311g.cpp  energy_acetone_hf_631g.cpp  energy_acetone_hf_ccpvdz.cpp  energy_acetone_hf_mini.cpp  energy_acetone_hf_sto3g.cpp  energy_acetone_mp2_321g.cpp  energy_acetone_mp2_631g.cpp  energy_acetone_mp2_ccpvdz.cpp  energy_acetone_mp2_mini.cpp  energy_acetone_mp2_sto3g.cpp  energy_ammonia_hf_321g.cpp  energy_ammonia_hf_6311g.cpp  energy_ammonia_hf_631g.cpp  energy_ammonia_hf_631gs.cpp  energy_ammonia_hf_ccpvdz.cpp  energy_ammonia_hf_mini.cpp  energy_ammonia_hf_sto3g.cpp  energy_ammonia_mp2_321g.cpp  energy_ammonia_mp2_631g.cpp  energy_ammonia_mp2_631gs.cpp  energy_ammonia_mp2_ccpvdz.cpp  energy_ammonia_mp2_mini.cpp  energy_ammonia_mp2_sto3g.cpp  energy_ethane_hf_321g.cpp  energy_ethane_hf_6311g.cpp  energy_ethane_hf_631g.cpp  energy_ethane_hf_631gs.cpp  energy_ethane_hf_ccpvdz.cpp  energy_ethane_hf_mini.cpp  energy_ethane_hf_sto3g.cpp  energy_ethane_mp2_321g.cpp  energy_ethane_mp2_631g.cpp  energy_ethane_mp2_631gs.cpp  energy_ethane_mp2_ccpvdz.cpp  energy_ethane_mp2_mini.cpp  energy_ethane_mp2_sto3g.cpp  energy_ethanol_hf_321g.cpp  energy_ethanol_hf_6311g.cpp  energy_ethanol_hf_631g.cpp  (+531 more)
test/template/: energy_hf.in  energy_mp2.in  grad_hf.in  gradient_hf.in  int_kinetic.in  int_nuclear.in  int_overlap.in  integral.in  numgrad_hf.in  numgrad_mp2.in
tool/hplot/: CMakeLists.txt  README.md
tool/hview/: CMakeLists.txt  README.md
(+7 files in other folders)
